--- a/css/styles.css
+++ b/css/styles.css
@@ -202,12 +202,6 @@ p {
   fill: var(--accent-color);
 }
 
-.portfolio-button:hover,
-.portfolio-button:focus {
-  background-color: var(--accent-color);
-  color: var(--white-color);
-}
-
 /* ==========End Header========== */
 
 /* ==========Hero========== */
@@ -537,6 +531,7 @@ p {
 .footer-address-list-item {
   flex-direction: column;
   display: flex;
+  font-style: normal;
 }
 
 .footer-maps {
@@ -642,6 +637,14 @@ p {
 
 .portfolio-button-list-item:not(:last-child) {
   margin-right: 8px;
+}
+
+.portfolio-button:hover,
+.portfolio-button:focus {
+  background-color: var(--accent-color);
+  color: var(--white-color);
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .portfolio-list {
